added admin pages

--- a/frontend/src/components/UI/Carousel/styles.css
+++ b/frontend/src/components/UI/Carousel/styles.css
@@ -1,32 +1,26 @@
-#app {
-  height: 100%;
-}
-html,
-body {
-  position: relative;
-  height: 100%;
+.carousel {
+  height: 630px;
 }
 
-body {
-  background: #eee;
-  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-  font-size: 14px;
-  color: #000;
-  margin: 0;
-  padding: 0;
+.swiper-coverflow {
+  height: 500px;
 }
 
-.swiper {
-  width: 100%;
-  padding-top: 50px;
-  padding-bottom: 50px;
+.swiper-wrapper {
+  height: 500px;
+  display: flex;
+  align-items: center;
 }
 
 .swiper-slide {
-  background-position: center;
-  background-size: cover;
-  width: 300px;
-  height: 300px;
+  display: flex;
+  align-items: center;
+}
+
+div.swiper-slide.swiper-slide-visible {
+  display: flex;
+  align-items: center;
+  height: fit-content;
 }
 
 .swiper-thumbs {
@@ -35,7 +29,6 @@ body {
 .swiper-slide img {
   display: block;
   width: 100%;
-  border-radius: 15px;
 }
 
 .carousel {
